[gd_scene load_steps=15 format=3 uid="uid://n5cchnvivbop"]

[ext_resource type="Texture2D" uid="uid://b647rtjsw6xpi" path="res://Assets/Materials/autumn.png" id="1_88d4f"]
[ext_resource type="Script" path="res://Scripts/animationStartManager.gd" id="2_mhwo8"]
[ext_resource type="Script" path="res://Scripts/StartMenu.gd" id="3_lblhe"]
[ext_resource type="Texture2D" uid="uid://bieh8ny6d5gum" path="res://Assets/Materials/autumn_blur.png" id="4_8dqpf"]
[ext_resource type="Texture2D" uid="uid://b4cgpppr1dsmt" path="res://Assets/Icons/Ghost_Game.png" id="4_737t6"]
[ext_resource type="Texture2D" uid="uid://ca0hagupjrkg0" path="res://Assets/Icons/start_button.png" id="5_3qmyq"]
[ext_resource type="Texture2D" uid="uid://naua6pwj4jw4" path="res://Assets/Icons/quit_button.png" id="6_umds2"]

[sub_resource type="Animation" id="Animation_jc1m3"]
resource_name = "leaf_01"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leaf:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1029, 18), Vector2(312.5, 400), Vector2(-404, 500)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animationStartManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"resize_leafs"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("leaf2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(1.1, 3.3, 4.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1075, 135), Vector2(577, 429), Vector2(227, 1108)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("leaf3:position")
tracks/3/interp = 2
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(2.3, 3.9, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(552, -232), Vector2(739.367, 586.932), Vector2(-85, 1023)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("leaf4:position")
tracks/4/interp = 2
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1114, 539), Vector2(-205, 1017)]
}

[sub_resource type="Animation" id="Animation_51c75"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leaf:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-201, 704)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leaf2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1075, 135)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("leaf3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(552, -232)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("leaf4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1114, 539)]
}

[sub_resource type="Animation" id="Animation_kt2og"]
resource_name = "leaf_02"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leaf2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1075, 135), Vector2(370, 503), Vector2(118, 1046)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bm20j"]
_data = {
"RESET": SubResource("Animation_51c75"),
"leaf_01": SubResource("Animation_jc1m3"),
"leaf_02": SubResource("Animation_kt2og")
}

[sub_resource type="Animation" id="Animation_e3tql"]
resource_name = "leaf_front_01"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leafFront:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(4.8, 5.9, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1115, 503), Vector2(405, 643), Vector2(-228, 900)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leafFront2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 2.4, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1121, 777), Vector2(344, 737), Vector2(-288, 650)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("animationStartManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"resize_leafs_front"
}]
}

[sub_resource type="Animation" id="Animation_xtl5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("leafFront:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1066, 342)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("leafFront2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1049, 83)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ujf0j"]
_data = {
"RESET": SubResource("Animation_xtl5s"),
"leaf_front_01": SubResource("Animation_e3tql")
}

[node name="StartScene" type="Node2D"]

[node name="animationStartManager" type="Node" parent="." node_paths=PackedStringArray("leaves_back", "leaves_front")]
script = ExtResource("2_mhwo8")
leaves_back = [NodePath("../leaf"), NodePath("../leaf2"), NodePath("../leaf3"), NodePath("../leaf4")]
leaves_front = [NodePath("../leafFront"), NodePath("../leafFront2")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bm20j")
}

[node name="leaf" type="Sprite2D" parent="."]
position = Vector2(-201, 704)
texture = ExtResource("1_88d4f")

[node name="leaf2" type="Sprite2D" parent="."]
position = Vector2(1075, 135)
texture = ExtResource("1_88d4f")

[node name="leaf3" type="Sprite2D" parent="."]
position = Vector2(552, -232)
texture = ExtResource("1_88d4f")

[node name="leaf4" type="Sprite2D" parent="."]
position = Vector2(1114, 539)
texture = ExtResource("1_88d4f")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 800.0
script = ExtResource("3_lblhe")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 2
offset_left = 110.5
offset_top = 299.5
offset_right = 689.5
offset_bottom = 500.5

[node name="TextureRect" type="TextureRect" parent="StartMenu/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_737t6")

[node name="MarginContainer" type="MarginContainer" parent="StartMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="StartMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="start_button" type="TextureButton" parent="StartMenu/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_3qmyq")

[node name="quit_button" type="TextureButton" parent="StartMenu/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_umds2")

[node name="AnimationPlayerFront" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ujf0j")
}

[node name="leafFront" type="Sprite2D" parent="."]
position = Vector2(1066, 342)
texture = ExtResource("4_8dqpf")

[node name="leafFront2" type="Sprite2D" parent="."]
position = Vector2(1049, 83)
texture = ExtResource("4_8dqpf")

[connection signal="pressed" from="StartMenu/VBoxContainer/VSplitContainer/start_button" to="StartMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/VSplitContainer/quit_button" to="StartMenu" method="_on_quit_button_pressed"]
